--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,9 +11,9 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="h-100 bg-light">
+  <body class="vh-100 bg-light">
     <div class="h-100">
-      <div id="chat">
+      <div id="chat" class="h-100">
       </div>
     </div>
     <script type="module" src="./src/index.js" ></script>
