--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Chat</title>
-    <link
-      rel="stylesheet"
-      href="../src/assets/application.scss"
-    />
+    <link rel="stylesheet" href="../src/assets/application.scss" />
   </head>
   <body class="vh-100 bg-light">
-      <div id="chat" class="h-100">
-      </div>
-    <script type="module" src="./src/index.js" ></script>
+    <div id="chat" class="h-100"></div>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
